Replace in-memory Bucket4j rate limits with Redis
Share the 10/min verify and 30/min download buckets across app
instances via bucket4j-redis and Lettuce. Redis-down fail-closes
with 503 instead of lifting the limit. docker-compose now runs Redis.

Co-authored-by: ∃architect <RicheyWorks@users.noreply.github.com>