@@ -1,9 +1,5 @@
 package com.enterprisepet.config;
 
-import io.github.bucket4j.Bandwidth;
-import io.github.bucket4j.Bucket;
-import io.github.bucket4j.ConsumptionProbe;
-import io.github.bucket4j.Refill;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -18,7 +14,6 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
 import java.time.Duration;
 import java.util.List;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
 
 /**
@@ -27,9 +22,11 @@ import java.util.concurrent.TimeUnit;
  * {@code 429 Too Many Requests} with a {@code Retry-After} header and a
  * {@code application/problem+json} body.
  *
- * <p>Buckets live in an in-memory {@link ConcurrentHashMap}. For multi-instance
- * deploys, swap the storage layer for {@code bucket4j-redis} so the limit is shared
- * across replicas.
+ * <p>Default store is Redis ({@code bucket4j-redis} + Lettuce) so replicas share
+ * the same 10/min verify and 30/min download budgets. If Redis is unreachable
+ * the filter fail-closes with {@code 503 Service Unavailable} and {@code Retry-After}
+ * — it does not fall back to a per-instance memory bucket, which would silently
+ * lift the shared limit.
  */
 @Component
 public class RateLimitingFilter extends OncePerRequestFilter {
@@ -40,12 +37,18 @@ public class RateLimitingFilter extends OncePerRequestFilter {
      * Buckets are namespaced by {@code remoteAddr + "|" + rule.bucketKey}.
      * Capacity is generous — these limits are abuse-prevention, not metering.
      */
-    private static final List<Rule> RULES = List.of(
+    static final List<Rule> RULES = List.of(
         new Rule("/api/verify/",   "verify",   10, Duration.ofMinutes(1)),
         new Rule("/api/download/", "download", 30, Duration.ofMinutes(1))
     );
 
-    private final ConcurrentHashMap<String, Bucket> buckets = new ConcurrentHashMap<>();
+    private final RateLimitBackend backend;
+    private final RateLimitProperties properties;
+
+    public RateLimitingFilter(RateLimitBackend backend, RateLimitProperties properties) {
+        this.backend = backend;
+        this.properties = properties;
+    }
 
     @Override
     protected void doFilterInternal(HttpServletRequest req, HttpServletResponse res, FilterChain chain)
@@ -57,28 +60,45 @@ public class RateLimitingFilter extends OncePerRequestFilter {
             return;
         }
 
-        String bucketKey = clientId(req) + "|" + rule.bucketKey;
-        Bucket bucket = buckets.computeIfAbsent(bucketKey, k -> buildBucket(rule));
+        String client = clientId(req);
+        String bucketKey = client + "|" + rule.bucketKey;
+        RateLimitBackend.Probe probe;
+        try {
+            probe = backend.tryConsume(bucketKey, rule.capacity, rule.period);
+        } catch (RuntimeException e) {
+            int retryAfter = Math.max(1, properties.getFailClosedRetryAfterSeconds());
+            log.warn("Rate limiter unavailable clientId={} rule={} retryAfter={}s",
+                client, rule.bucketKey, retryAfter, e);
+            writeProblem(res, 503, "Service Unavailable",
+                "Rate limiter unavailable. Retry after %d seconds.".formatted(retryAfter),
+                retryAfter);
+            return;
+        }
 
-        ConsumptionProbe probe = bucket.tryConsumeAndReturnRemaining(1);
-        if (probe.isConsumed()) {
-            res.setHeader("X-RateLimit-Remaining", String.valueOf(probe.getRemainingTokens()));
+        if (probe.consumed()) {
+            res.setHeader("X-RateLimit-Remaining", String.valueOf(probe.remainingTokens()));
             chain.doFilter(req, res);
             return;
         }
 
-        long retryAfterSeconds = TimeUnit.NANOSECONDS.toSeconds(probe.getNanosToWaitForRefill()) + 1;
+        long retryAfterSeconds = TimeUnit.NANOSECONDS.toSeconds(probe.nanosToWaitForRefill()) + 1;
         log.info("Rate limit exceeded clientId={} rule={} retryAfter={}s",
-            clientId(req), rule.bucketKey, retryAfterSeconds);
+            client, rule.bucketKey, retryAfterSeconds);
 
-        res.setStatus(429);
+        writeProblem(res, 429, "Too Many Requests",
+            "Rate limit exceeded for %s. Retry after %d seconds.".formatted(rule.bucketKey, retryAfterSeconds),
+            retryAfterSeconds);
+    }
+
+    private static void writeProblem(HttpServletResponse res, int status, String title,
+                                     String detail, long retryAfterSeconds) throws IOException {
+        res.setStatus(status);
         res.setHeader(HttpHeaders.RETRY_AFTER, String.valueOf(retryAfterSeconds));
         res.setContentType(MediaType.APPLICATION_PROBLEM_JSON_VALUE);
-        res.getWriter().write(String.format(
-            "{\"type\":\"about:blank\",\"title\":\"Too Many Requests\",\"status\":429,"
-            + "\"detail\":\"Rate limit exceeded for %s. Retry after %d seconds.\","
-            + "\"retryAfterSeconds\":%d}",
-            rule.bucketKey, retryAfterSeconds, retryAfterSeconds));
+        res.getWriter().write(
+            "{\"type\":\"about:blank\",\"title\":\"%s\",\"status\":%d,"
+                + "\"detail\":\"%s\","
+                + "\"retryAfterSeconds\":%d}".formatted(title, status, detail, retryAfterSeconds));
     }
 
     private static Rule ruleFor(String path) {
@@ -93,7 +113,7 @@ public class RateLimitingFilter extends OncePerRequestFilter {
      * direct exposure, this should be disabled or restricted to a known proxy IP set
      * to prevent spoofing.
      */
-    private static String clientId(HttpServletRequest req) {
+    static String clientId(HttpServletRequest req) {
         String fwd = req.getHeader("X-Forwarded-For");
         if (fwd != null && !fwd.isBlank()) {
             int comma = fwd.indexOf(',');
@@ -102,12 +122,6 @@ public class RateLimitingFilter extends OncePerRequestFilter {
         return req.getRemoteAddr();
     }
 
-    private static Bucket buildBucket(Rule rule) {
-        Bandwidth bandwidth = Bandwidth.classic(rule.capacity,
-            Refill.intervally(rule.capacity, rule.period));
-        return Bucket.builder().addLimit(bandwidth).build();
-    }
-
     /** Path prefix → (capacity, refill window). */
-    private record Rule(String pathPrefix, String bucketKey, long capacity, Duration period) {}
+    record Rule(String pathPrefix, String bucketKey, long capacity, Duration period) {}
 }
